--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
-/*body {
+body {
     background-color: blue;
-}*/
+}
 
+
+.main-container {
+    background-color: white;
+    border: 2px solid grey;
+    border-radius: 10px;
+}
 
 /* css styles from app.js */
 .collection-item {
